# IRENICS

./: CMakeLists.txt  LCM_AND_HCF  README.md  Trial 1  main.cpp  tiki.txt
Editor/: editor.cpp  editor.h  window.cpp  window.h
Graphic/: renderer.cpp  renderer.h
Libraries/include/: gizmo.hpp
Libraries/include/glad/: glad.h
Libraries/include/imgui/: imgui.h
Main/: Editormain.cpp
